crates/ide/src/completion/snapshots/ide__completion__context__tests__context_fixtures@lex_line_comment_before_directive.v.snap
---
source: crates/ide/src/completion/context.rs
expression: context_snapshot(&c)
input_file: crates/ide/src/completion/context/fixtures/lex_line_comment_before_directive.v
---
lex: LineComment
prefix: ""
replacement: 10..10
expectations:
  <none>
