crates/ide/src/completion/snapshots/ide__completion__context__tests__context_fixtures@lex_line_comment_file_start.v.snap
---
source: crates/ide/src/completion/context.rs
expression: context_snapshot(&c)
input_file: crates/ide/src/completion/context/fixtures/lex_line_comment_file_start.v
---
lex: LineComment
prefix: ""
replacement: 9..9
expectations:
  <none>
