crates/ide/src/completion/snapshots/ide__completion__context__tests__context_fixtures@lex_line_comment_file_start_comma_trigger.v.snap
---
source: crates/ide/src/completion/context.rs
expression: context_snapshot(&c)
input_file: crates/ide/src/completion/context/fixtures/lex_line_comment_file_start_comma_trigger.v
---
lex: LineComment
prefix: ""
replacement: 4..4
expectations:
  <none>
