crates/ide/src/completion/snapshots/ide__completion__context__tests__context_fixtures@lex_line_comment_middle_of_file.v.snap
---
source: crates/ide/src/completion/context.rs
expression: context_snapshot(&c)
input_file: crates/ide/src/completion/context/fixtures/lex_line_comment_middle_of_file.v
---
lex: LineComment
prefix: ""
replacement: 18..18
expectations:
  <none>
