crates/ide/src/completion/snapshots/ide__completion__context__tests__context_fixtures@lex_string_literal.v.snap
---
source: crates/ide/src/completion/context.rs
expression: context_snapshot(&c)
input_file: crates/ide/src/completion/context/fixtures/lex_string_literal.v
---
lex: Literal
prefix: "\"he"
replacement: 27..34
in_decl_name: false
expectations:
  <none>
