crates/ide/src/completion/snapshots/ide__completion__context__tests__context_fixtures@lex_typing_based_literal_after_digits.v.snap
---
source: crates/ide/src/completion/context.rs
expression: context_snapshot(&c)
input_file: crates/ide/src/completion/context/fixtures/lex_typing_based_literal_after_digits.v
---
lex: Literal
prefix: ""
replacement: 29..29
expectations:
  <none>
