crates/ide/src/completion/snapshots/ide__completion__context__tests__context_fixtures@library_map_item_keyword_prefix.map.snap
---
source: crates/ide/src/completion/context.rs
expression: context_snapshot(&c)
input_file: crates/ide/src/completion/context/fixtures/library_map_item_keyword_prefix.map
---
lex: Code
prefix: "lib"
replacement: 0..3
in_decl_name: false
expectations:
  Keyword(LibraryMapMember)
