crates/ide/src/completion/snapshots/ide__completion__context__tests__context_fixtures@line_comment_eol_boundary_top_level.v.snap
---
source: crates/ide/src/completion/context.rs
expression: context_snapshot(&c)
input_file: crates/ide/src/completion/context/fixtures/line_comment_eol_boundary_top_level.v
---
lex: LineComment
prefix: ""
replacement: 4..4
in_decl_name: false
expectations:
  <none>
