crates/ide/src/completion/snapshots/ide__completion__context__tests__context_fixtures@module_member_start.v.snap
---
source: crates/ide/src/completion/context.rs
expression: context_snapshot(&c)
input_file: crates/ide/src/completion/context/fixtures/module_member_start.v
---
lex: Code
prefix: ""
replacement: 12..12
in_decl_name: false
expectations:
  Keyword(ModuleMember)
